--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,20 @@ before_install:
 - cp /usr/lib/python2.7/dist-packages/fontforge.* "$HOME/virtualenv/python2.7.8/lib/python2.7/site-packages"
 install:
 - pip install git+https://github.com/behdad/fontTools.git
+- pip install git+https://github.com/googlefonts/fontcrunch.git
 - pip install git+https://github.com/googlefonts/fontbakery-cli.git
 - pip install jinja2
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py .
+before_script:
+- mkdir -p builds/build
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py . | tee builds/build/build.log
 branches:
   only:
   - master
 after_script:
-- rm -rf builds/build/sources builds/build/build.state.yaml
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH bakery-report.py builds/build
+- rm -rf builds/build/sources
+- rm -rf builds/build/build.state.yaml
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH travis-deploy.py
 env:
   global:
-    secure: H9+pIflZllJygZmfnFzlErUwVMT8ykP8SJDlw2e0GRpuu18ybT7liSypR4G4Kd0pBLoLKkk+VVdgU9Y6zDeMZXqXjE9n1RQmfSfyGFVG3EhEBqoFGdH0ikV2+TteZyzVq3gOHDtej1d/tIxtGQHPoZABNXqdDhlSTnC4lv6zmas=
+    secure: KntYW8l45NQjzUMZn5H/ccKlL93BfsrX7s8WB0mdsN7G8I9PzF+OtJtqLyKIqC6kCdrqp8MC9TFuudfw+2E9Y8L44FC7NAq/TD28jCF1KGLjDoS3GJyMsGpOMimZEbXhGfm/WJLF3yBtfzrRwpBfUZ0uBN9sW9sbgFtbzCx4B7w=
