--- a/.travis.yml
+++ b/.travis.yml
@@ -11,15 +11,15 @@ install:
 - pip install jinja2
 before_script:
 - mkdir -p builds/build
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py . | tee builds/build/buildlog.txt
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py . 2>&1 | tee -a builds/build/buildlog.txt
 branches:
   only:
   - master
 after_script:
-- PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH bakery-report.py builds/build
+- PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-report.py builds/build
 - rm -rf builds/build/sources
 - rm -rf builds/build/build.state.yaml
-- PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH travis-deploy.py
+- PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-travis-deploy.py
 env:
   global:
     secure: KntYW8l45NQjzUMZn5H/ccKlL93BfsrX7s8WB0mdsN7G8I9PzF+OtJtqLyKIqC6kCdrqp8MC9TFuudfw+2E9Y8L44FC7NAq/TD28jCF1KGLjDoS3GJyMsGpOMimZEbXhGfm/WJLF3yBtfzrRwpBfUZ0uBN9sW9sbgFtbzCx4B7w=
